core/tests/ui/store/nested_ref_non_store_child.stderr
error[E0277]: the trait bound `PlainChild: Bridge` is not satisfied
  --> tests/ui/store/nested_ref_non_store_child.rs:14:12
   |
14 |     child: PlainChild,
   |            ^^^^^^^^^^ the trait `Bridge` is not implemented for `PlainChild`
   |
   = note: required for `PlainChild` to implement `Bridge`

error[E0277]: the trait bound `PlainChild: Bridge` is not satisfied
  --> tests/ui/store/nested_ref_non_store_child.rs:14:12
   |
14 |     child: PlainChild,
   |            ^^^^^^^^^^ the trait `Bridge` is not implemented for `PlainChild`
   |
   = note: required for `PlainChild` to implement `Bridge`
   = note: this error originates in the derive macro `Store` (in Nightly builds, run with -Z macro-backtrace for more info)
